# flux-model

./: .gitignore  Makefile  flx-architecture.html  flx-architecture1.html  pyproject.toml  readme.md
.github/: PHASE01_DEBUG.md  PHASE02_DEBUG.md  PHASE03_DEBUG.md  PHASE04_DEBUG.md  PHASE05_DEBUG.md  PHASE0_DEBUG.md  copilot-instructions.md
.github/instructions/: tests.instructions.md  training.instructions.md
.github/skills/spec-to-code/: SKILL.md
.github/skills/spec-to-code/references/: spec-map.md
flx/: __init__.py  autograd_bridge.py  bridges.py  delta.py  hypothesis.py  kernels.py  memory.py  meta_gen.py  model.py  router.py  serialization.py  thermal.py
flx/training/: __init__.py  phase0_cortex.py  phase1_delta.py  phase2_thermal.py  phase3_memory.py  phase4_meta.py  phase5_abstraction.py  utils.py
notebooks/: colab_runner.ipynb  transplant_and_retrain.ipynb  validation_experiments.ipynb
possibilities/: dimension-agnostic.md  surgical-implants.md
spec/: 00-readme.md  01-thesis.md  02-architecture.md  03-cortical-system.md  04-training-curriculum.md  05-thermal-system.md  06-memory-subsystem.md  07-self-improvement.md  08-capabilities.md  09-flx-nano.md  10-reality-checks.md  11-gpu-efficiency.md  12-implementation-guide.md  13-phase5-abstraction.md  14-validation-experiments.md
tests/: test_bridges.py  test_cortex.py  test_critical.py  test_delta.py  test_kernels.py  test_memory.py  test_meta_gen.py  test_phase5.py  test_routing.py  test_serialization.py  test_thermal.py  test_training.py
