[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flx"
version = "0.1.0"
description = "FLX — A cortical, delta-native, thermally-routed LLM with persistent memory"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
triton = [
    "triton>=2.1.0",
]
all = ["flx[dev,triton]"]

[tool.setuptools.packages.find]
include = ["flx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
